# japanese-name-validator

./: .coverage  .gitignore  lambda_function.py  pyproject.toml
.claude/: CLAUDE.md
data/: name_readings.json
data/surnames/: 3006.json  30C8.json  4E00.json  4E01.json  4E03.json  4E07.json  4E08.json  4E09.json  4E0A.json  4E0B.json  4E0D.json  4E0E.json  4E11.json  4E16.json  4E18.json  4E21.json  4E26.json  4E2D.json  4E32.json  4E38.json  4E39.json  4E3B.json  4E43.json  4E45.json  4E57.json  4E59.json  4E5D.json  4E71.json  4E73.json  4E7E.json  4E80.json  4E8C.json  4E94.json  4E95.json  4E98.json  4EA4.json  4EA5.json  4EA6.json  4EAC.json  4EBA.json  (+1571 more)
scripts/: convert_namedic.py
tests/: test_validator.py
validators/: __init__.py  hepburn_converter.py  kanji_reader.py  name_matcher.py
workspace/namedic/: scraper.js
workspace/namedic/data/: 01_あ.json  02_い.json  03_う.json  04_え.json  05_お.json  06_か.json  07_き.json  08_く.json  09_け.json  10_こ.json  11_が.json  12_ぎ.json  13_ぐ.json  14_げ.json  15_ご.json  16_さ.json  17_し.json  18_す.json  19_せ.json  20_そ.json  21_ざ.json  22_じ.json  23_ず.json  24_ぜ.json  25_ぞ.json  26_た.json  27_ち.json  28_つ.json  29_て.json  30_と.json  31_だ.json  32_ぢ.json  33_づ.json  34_で.json  35_ど.json  36_な.json  37_に.json  38_ぬ.json  39_ね.json  40_の.json  (+24 more)
