[project]
name = "toeic-name-validator"
version = "1.0.0"
description = "TOEIC申込み用 漢字氏名・ローマ字整合性チェッカー"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["validators"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
